--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "minesweeper-react",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://therealmofcode.com/minesweeper-react",
   "dependencies": {
     "@types/jest": "24.0.15",
     "@types/node": "12.6.3",
     "@types/react": "16.8.23",
     "@types/react-dom": "16.8.4",
+    "gh-pages": "^2.0.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
@@ -16,7 +18,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "yarn run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
