--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "@types/node": "12.6.3",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
-    "gh-pages": "^2.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
@@ -36,5 +35,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^4.0.0"
   }
 }
